fixes in block alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -24,9 +24,7 @@
   &__text {
 
     @media screen and (min-width: $breakpoint-tablet) {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      align-self: end;
       width: 342px;
     }
 
