--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -27,9 +27,7 @@
     }
 
     @media screen and (min-width: $breakpoint-laptop) {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      align-self: end;
       width: auto;
       max-width: 480px;
     }
@@ -64,6 +62,7 @@
 
     @media screen and (min-width: $breakpoint-laptop) {
       grid-template-columns: 480px;
+      margin: 50px 0 0;
     }
   }
 
