--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -28,9 +28,7 @@
   }
 
   &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    align-self: end;
     max-width: 280px;
     margin: 0 auto;
 
