--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -22,6 +22,7 @@
     opacity: 0.5;
     transform: rotate(-90deg) translateX(-100%);
     transform-origin: left center;
+    cursor: default;
 
     @media screen and (min-width: $breakpoint-laptop) {
       display: block;
